Drag-Select armature bones to bones collection in the viewport crashes Blender. #116320

Closed
opened 2023-12-19 07:27:42 +01:00 by funty · 4 comments

System Information
Operating system: Win 10, 22H2
Graphics card: Quadro P1000

Blender Version
Broken: Blender 4.1 Alpha, 4.03 Dec. 19th, 2023
Worked: new feature, maybe its unfinished.

Short description of error
Blender crashes when bone of "non-active armature" is moved into bone collection of active Armature in Edit mode.
Click-select works as expected.

Note: Box select do not tweak the active flag for any data

Exact steps for others to reproduce the error

  1. Load Factory Preferences after starting Blender.
  2. Delete Cube.
  3. Add Armature.
  4. Shift + D duplicate armature
  5. Select both armatures, or any that you created, and make sure at least one of the armatures is selected in the Outliner.
  6. Go into Edit mode
  7. "Box select" any armature other than the original
  8. Press M to move to another bone collection.
  9. Select a collection (any created collections) to move highlighted armature to in the pop-up dialog.
  10. Blender crashes.

Thanks.

**System Information** Operating system: Win 10, 22H2 Graphics card: Quadro P1000 **Blender Version** Broken: Blender 4.1 Alpha, 4.03 Dec. 19th, 2023 Worked: new feature, maybe its unfinished. **Short description of error** Blender crashes when bone of "non-active armature" is moved into bone collection of active Armature in Edit mode. Click-select works as expected. Note: Box select do not tweak the active flag for any data **Exact steps for others to reproduce the error** 1. Load Factory Preferences after starting Blender. 2. Delete Cube. 3. Add Armature. 4. Shift + D duplicate armature 5. Select both armatures, or any that you created, and make sure at least one of the armatures is selected in the Outliner. 6. Go into Edit mode 7. "Box select" any armature other than the original 8. Press M to move to another bone collection. 9. Select a collection (any created collections) to move highlighted armature to in the pop-up dialog. 10. Blender crashes. Thanks.
funty added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-12-19 07:27:42 +01:00
funty changed title from Blender 4 crash when moving armature bones to bones collection using drag-select in the viewport. to Drag-Select armature bones to bones collection in the viewport crashes Blender. 2023-12-19 07:37:23 +01:00
Member

Unable to confirm in current main (e87b67398c048f9e2832bbdfebb55d2e800e884e)

Unable to confirm in current main (`e87b67398c048f9e2832bbdfebb55d2e800e884e`)
Member

Drag-select any armature

Does it mean tweak operation? Can you confirm in attached file?
I see what you mean. You're using box select to keep active bone same. Can confirm the crash.

> Drag-select any armature ~~Does it mean `tweak` operation? Can you confirm in attached file?~~ I see what you mean. You're using box select to keep active bone same. Can confirm the crash.
Pratik Borhade added
Module
Animation & Rigging
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-12-19 10:22:44 +01:00
Member

Guess fix will be: find out whether target bone-collection exists in source armature (find_index or find_link) before assigning to collection

I'll check

Guess fix will be: find out whether target bone-collection exists in source armature (`find_index or find_link`) before assigning to collection I'll check
Pratik Borhade self-assigned this 2023-12-19 11:25:28 +01:00
Author

Hi,

Okay, I guess that makes sense from the programming point of view.

Thanks.

Hi, Okay, I guess that makes sense from the programming point of view. Thanks.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-22 12:32:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116320
No description provided.